[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "nano-vllm"
version = "0.2.0"
authors = [{ name = "Xingkai Yu" }]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
description = "a lightweight vLLM implementation built from scratch"
requires-python = ">=3.10,<3.13"
dependencies = [
    "torch>=2.6.0,<2.7",
    "triton>=3.2.0,<3.3",
    "transformers>=4.51.0,<4.53",
    "flash-attn>=2.7.0,<2.8",
    "xxhash",
]

[project.optional-dependencies]
bench = [
    "vllm>=0.8.5,<0.9",
    "psutil",
]

[project.urls]
Homepage="https://github.com/GeeeekExplorer/nano-vllm"

[tool.setuptools.packages.find]
where = ["."]
include = ["nanovllm*"]

[tool.uv]
find-links = ["https://download.pytorch.org/whl/cu124"]
